--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
     </div>
 </section>
-<!-- <section id="news" class="section news">
+<section id="news" class="section news">
     <div class="container"><h2 class="section_title">For every kind of Business!</h2>
         <p class="section_desription">Donec facilisis tortor ut augue lacinia, at viverra est semper.</p>
         <div class="row news_block">
@@ -185,7 +185,7 @@
         <div class="text-center clearfix section_button"><a href="#" class="btn btn-outline-primary btn-lg ">Learn
             more</a></div>
     </div>
-</section> -->
+</section>
 <footer class="main_footer">
     <div class="container">
         <div id="download" class="download"><h3>Mobile App!</h3>
